# rschat

./: .gitignore  Cargo.toml
client/: Cargo.toml
client/src/: main.rs
common/: Cargo.toml
common/src/: lib.rs
server/: Cargo.toml
server/src/: main.rs
web/: package-lock.json  package.json
web/src/: App.tsx  index.css
