[workspace]
members = ["client", "server", "common"]

[workspace.dependencies]
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
common = { path = "./common" }
ratatui = {version = "0.22", features = ["serde"]}
tokio-tungstenite = "0.20"
tokio = {version = "1", features = ["full"]}
futures-channel = "0.3.28"
futures-util = { version = "0.3.28", default-features = false, features = ["sink", "std"] }